syntax = "proto3";

package com.iscas.common.rpc.tools.grpc.test;

option java_package = "com.iscas.common.rpc.tools.grpc.test";
option java_outer_classname = "PersonProto";
option java_multiple_files = true;

//rpc方法
service PersonService {
    rpc GetRealNameByUsername(MyRequest) returns (MyResponse) {}
}

//请求
message MyRequest {
    string username = 1;
}

//响应
message MyResponse {
    string realname = 2;
}